--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>React UI 개발 가이드</title>
+    <title>Polestar Icons</title>
 
     <!-- <link rel="stylesheet" href="./public/css/style.css" /> -->
 </head>
