--- a/examples/index.html
+++ b/examples/index.html
@@ -9,6 +9,6 @@
 <body>
 <div id="app"></div>
 
-<script type="text/javascript" src="/examples/app.js"></script>
+<script type="text/javascript" src="build/app.js"></script>
 </body>
 </html>
