#32987 vebpack v4 / babel7 으로 설정 변경

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Polestar Icons</title>
-
-    <!-- <link rel="stylesheet" href="./public/css/style.css" /> -->
+<meta charset="UTF-8">
+<meta http-equiv="refresh" content="0; url=./build/">
 </head>
 <body>
-<div id="app"></div>
 
-<script type="text/javascript" src="build/app.js"></script>
 </body>
 </html>
